[gd_scene load_steps=7 format=3 uid="uid://w23y105a110o"]

[ext_resource type="PackedScene" uid="uid://cyrjqlsuuv5" path="res://scenes/map_editor/story/stories/types/base_edit_action.tscn" id="1_2r721"]
[ext_resource type="Script" path="res://scenes/map_editor/story/stories/types/objective.gd" id="2_ofdlp"]
[ext_resource type="FontFile" uid="uid://btstgc45ggura" path="res://assets/fonts/courier.tres" id="3_4dcwn"]
[ext_resource type="Texture2D" uid="uid://cat1jloyg2wym" path="res://assets/gui/menu/buttons/buttonMed_brown.png" id="8_106sj"]
[ext_resource type="Texture2D" uid="uid://bbdwp6f0d3nib" path="res://assets/gui/menu/buttons/buttonMed_brown_pressed.png" id="9_jpl56"]
[ext_resource type="Texture2D" uid="uid://dk8ep1qsmga0q" path="res://assets/gui/menu/buttons/buttonMed_brown_hover.png" id="10_mqy3m"]

[node name="Objective" instance=ExtResource("1_2r721")]
script = ExtResource("2_ofdlp")

[node name="slot" type="Label" parent="." index="4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 150.0
offset_right = -250.0
offset_bottom = -310.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_4dcwn")
text = "TR_SLOT"
vertical_alignment = 1

[node name="slot" type="LineEdit" parent="slot" index="0"]
layout_mode = 0
offset_left = 350.0
offset_right = 540.0
offset_bottom = 40.0
text = "1"
alignment = 1

[node name="clear" type="Label" parent="." index="5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 250.0
offset_right = -250.0
offset_bottom = -210.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_4dcwn")
text = "TR_CLEAR"
vertical_alignment = 1

[node name="clear_button" type="TextureButton" parent="clear" index="0"]
layout_mode = 0
offset_left = 350.0
offset_right = 540.0
offset_bottom = 40.0
texture_normal = ExtResource("8_106sj")
texture_pressed = ExtResource("9_jpl56")
texture_hover = ExtResource("10_mqy3m")
texture_focused = ExtResource("10_mqy3m")

[node name="label" type="Label" parent="clear/clear_button" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_4dcwn")
text = "TR_ON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="text" type="TextEdit" parent="." index="6"]
offset_top = 200.0
offset_right = 540.0
offset_bottom = 240.0

[connection signal="text_changed" from="slot/slot" to="." method="_on_text_changed"]
[connection signal="pressed" from="clear/clear_button" to="." method="_on_clear_button_pressed"]
[connection signal="text_changed" from="text" to="." method="_on_text_area_changed"]
